# fftw-ocaml

./: .bzrignore  .gitignore  .travis.yml  CHANGES.md  LICENSE  Makefile  Makefile.in  OCamlMakefile  README  README.md  bootstrap  configure.ac  dune-project  dune-workspace.dev  fftw3.opam  opam.in  travis-ci.sh
.github/workflows/: main.yml
config/: discover.ml  dune  examples.ml  make_prec_dep.ml
doc/: index.html
doc/_html/: index.html
doc/_html/fftw3/: index.html
doc/_html/fftw3/Fftw3/: index.html
doc/_html/fftw3/Fftw3/D/Array1/: index.html
doc/_html/fftw3/Fftw3/D/Genarray/: index.html
doc/_html/fftw3/Fftw3/S/Array1/: index.html
doc/_html/fftw3/Fftw3/S/Array2/: index.html
doc/_html/fftw3/Fftw3/S/Genarray/: index.html
doc/_html/fftw3/Fftw3/module-type-Sig/Array1/: index.html
doc/_html/fftw3/Fftw3__/Fftw3D/Array2/: index.html
doc/_html/fftw3/Fftw3__/Fftw3S/: index.html
doc/_html/fftw3/Fftw3__/Fftw3_utils/: index.html
doc/_html/fftw3/Fftw3__/Fftw3_utils/Geom/: index.html
doc/_html/fftw3/Fftw3__/Fftw3_utils/List/: index.html
doc/_html/fftw3/Fftw3__Fftw3D/: index.html
doc/_html/fftw3/Fftw3__Fftw3_geomF/: index.html
doc/_html/fftw3/Fftw3__Fftw3_utils/List/: index.html
doc/_mlds/fftw3/: index.mld
doc/_odoc/lib/fftw3/: fftw3.odoc  fftw3__.odoc  fftw3__Fftw3D.odoc  fftw3__Fftw3S.odoc  fftw3__Fftw3_geomC.odoc  fftw3__Fftw3_geomF.odoc  fftw3__Fftw3_utils.odoc
doc/_odoc/pkg/fftw3/: page-index.odoc
doc/fftw3/: index.html
doc/fftw3/Fftw3/: index.html
doc/fftw3/Fftw3/D/: index.html
doc/fftw3/Fftw3/D/Array1/: index.html
doc/fftw3/Fftw3/D/Array2/: index.html
doc/fftw3/Fftw3/D/Array3/: index.html
doc/fftw3/Fftw3/D/Genarray/: index.html
doc/fftw3/Fftw3/D/Guru/: index.html
doc/fftw3/Fftw3/S/: index.html
doc/fftw3/Fftw3/S/Array1/: index.html
doc/fftw3/Fftw3/S/Array2/: index.html
doc/fftw3/Fftw3/S/Array3/: index.html
doc/fftw3/Fftw3/S/Genarray/: index.html
doc/fftw3/Fftw3/S/Guru/: index.html
doc/fftw3/Fftw3/Wisdom/: index.html
doc/fftw3/Fftw3/module-type-Sig/: index.html
doc/fftw3/Fftw3/module-type-Sig/Array1/: index.html
doc/fftw3/Fftw3/module-type-Sig/Array2/: index.html
doc/fftw3/Fftw3/module-type-Sig/Array3/: index.html
doc/fftw3/Fftw3/module-type-Sig/Genarray/: index.html
doc/fftw3/Fftw3/module-type-Sig/Guru/: index.html
doc/fftw3/Fftw3__/: index.html
doc/fftw3/Fftw3__/Fftw3D/: index.html
doc/fftw3/Fftw3__/Fftw3D/Array1/: index.html
doc/fftw3/Fftw3__/Fftw3D/Array2/: index.html
doc/fftw3/Fftw3__/Fftw3D/Array3/: index.html
doc/fftw3/Fftw3__/Fftw3D/Genarray/: index.html
doc/fftw3/Fftw3__/Fftw3D/Guru/: index.html
doc/fftw3/Fftw3__/Fftw3S/: index.html
doc/fftw3/Fftw3__/Fftw3S/Array1/: index.html
doc/fftw3/Fftw3__/Fftw3S/Array2/: index.html
doc/fftw3/Fftw3__/Fftw3S/Array3/: index.html
doc/fftw3/Fftw3__/Fftw3S/Genarray/: index.html
doc/fftw3/Fftw3__/Fftw3S/Guru/: index.html
doc/fftw3/Fftw3__/Fftw3_geomC/: index.html
doc/fftw3/Fftw3__/Fftw3_geomF/: index.html
doc/fftw3/Fftw3__/Fftw3_utils/: index.html
doc/fftw3/Fftw3__/Fftw3_utils/Geom/: index.html
doc/fftw3/Fftw3__/Fftw3_utils/List/: index.html
doc/fftw3/Fftw3__Fftw3D/: index.html
doc/fftw3/Fftw3__Fftw3D/Array1/: index.html
doc/fftw3/Fftw3__Fftw3D/Array2/: index.html
doc/fftw3/Fftw3__Fftw3D/Array3/: index.html
doc/fftw3/Fftw3__Fftw3D/Genarray/: index.html
doc/fftw3/Fftw3__Fftw3D/Guru/: index.html
doc/fftw3/Fftw3__Fftw3S/: index.html
doc/fftw3/Fftw3__Fftw3S/Array1/: index.html
doc/fftw3/Fftw3__Fftw3S/Array2/: index.html
doc/fftw3/Fftw3__Fftw3S/Array3/: index.html
doc/fftw3/Fftw3__Fftw3S/Genarray/: index.html
doc/fftw3/Fftw3__Fftw3S/Guru/: index.html
doc/fftw3/Fftw3__Fftw3_geomC/: index.html
doc/fftw3/Fftw3__Fftw3_geomF/: index.html
doc/fftw3/Fftw3__Fftw3_utils/: index.html
doc/fftw3/Fftw3__Fftw3_utils/Geom/: index.html
doc/fftw3/Fftw3__Fftw3_utils/List/: index.html
examples/: Makefile.in  chirp.ml  delta.ml  henon.ml  mem.ml  xcorr.ml  xcorr.mli  xcorr_test.ml
opam/: opam.in
src/: META.in  Makefile.in  bigarray_stubs.c  fftw3.ml  fftw3.mli  fftw3D_external.ml  fftw3SD.ml  fftw3SD_genarray.ml  fftw3SD_stubs.c  fftw3_geom.ml  fftw3_geomCF.ml  fftw3_stubs.c  fftw3_utils.ml  make_prec_dep.ml
tests/: Makefile.in  basic.ml
